--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-scroll-top": "^0.2.1",
     "react-scripts": "4.0.0",
     "react-simple-chatbot": "^0.6.1",
+    "react-simple-modal-slideshow": "^1.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
