--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "pdf-viewer-reactjs": "^2.2.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -18,6 +19,7 @@
     "react-image-gallery": "^1.0.8",
     "react-images": "^1.1.7",
     "react-modal": "^3.12.1",
+    "react-pdf": "^5.1.0",
     "react-router-dom": "^5.2.0",
     "react-router-scroll-top": "^0.2.1",
     "react-scripts": "4.0.0",
